# edge-auth-manager-prototype-ISL

./: .env.example  .gitignore  CLAUDE.md  README.md  VERIFICATION_REPORT.md  docker-compose.agent.yml  docker-compose.agent2.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
certs/: ca.key
certs/admin/: client.crt  client.key
certs/agent/: ca.crt  client.crt  client.key
certs/manager/: server.crt  server.key
certs/rabbitmq/: server.crt  server.key
docs/: COMPLIANCE.md  DASHBOARD_GUIDE.md  DELIVERABLES.md  DEVELOPMENT_CHECKLIST.md  LATTEPANDA_DEMO_GUIDE.md
docs/screenshots/: PPT_MAPPING.md  SCREENSHOT_GUIDE.md  SCREENSHOT_LOCATIONS.md
ops/: capture_3tier.py  capture_auth_flow_code.py  capture_auth_sections.py  capture_checklist_code.py  capture_crl_ocsp.py  capture_exception_code.py  capture_full_flow.py  capture_hmac_code.py  capture_pki_sections.py  capture_screenshots.py  capture_screenshots_v2.py  capture_test_screenshots.py  capture_theft_response.py  gen_certs.py  generate_autoscale_diagram.py  generate_exception_flow.py  generate_legend.py  generate_sequence_diagram.py  rotate_demo.md  verify_compliance.sh
ops/rabbitmq/: definitions.json  init.sh  rabbitmq.conf
scripts/: show-ip.bat  show-ip.sh  start-agent-auto.bat  start-agent-auto.sh  start-agent.bat  start-agent.sh  start-agent2-auto.sh  start-server.bat  start-server.sh  stop-all.bat  stop-all.sh
services/agent/: Dockerfile
services/agent/agent/: amqp_pub.py  buffer.py  run.py  (+4 more)
services/dashboard/: Dockerfile
services/manager/: Dockerfile
(+14 files in other folders)
